# erqwest

./: .build  .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  api-reference.html  edoc-info  erqwest.epub  erqwest.html  erqwest_app.html  erqwest_async.html  erqwest_nif.html  erqwest_runtime.html  erqwest_sup.html  index.html  license.html  modules-frame.html  overview-summary.html  pkgs.nix  readme.html  rebar.config  search.html  shell.nix
.github/: dependabot.yml
.github/workflows/: docs.yml  test.yml
bench/: .gitignore  Makefile  README.html  README.md  bench.escript  nginx.conf  rebar.config  shell.nix  streaming_download.escript  streaming_upload.escript
docker_smoke_tests/: Dockerfile.musl
native/: Cargo.toml  Makefile
native/.cargo/: config
native/src/: client.rs  lib.rs  req.rs  runtime.rs  utils.rs
src/: erqwest.app.src  erqwest.erl  erqwest_app.erl  erqwest_async.erl  erqwest_nif.erl  erqwest_runtime.erl  erqwest_sup.erl
test/: erqwest_SUITE.erl  server.erl
