[package]
name = "erqwest"
version = "0.1.0"
edition = "2018"

[lib]
name = "erqwest"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { git = "https://github.com/rusterlium/rustler.git", rev = "c5800b584799960993ab705b0f113a711c72b87e" }
rustler_codegen = { git = "https://github.com/rusterlium/rustler.git", rev = "c5800b584799960993ab705b0f113a711c72b87e" }
lazy_static = "1.0.0"
reqwest = { version = "0.11", features = ["native-tls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
bytes = "1"

[features]
default = []
cookies = ["reqwest/cookies"]
gzip = ["reqwest/gzip"]
