[package]
name = "erqwest"
version = "0.2.1"
edition = "2018"

[lib]
name = "erqwest"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.26.0"
rustler_codegen = "0.26.0"
lazy_static = "1.0.0"
reqwest = { version = "0.11", features = ["native-tls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
bytes = "1"

[features]
default = []
cookies = ["reqwest/cookies"]
gzip = ["reqwest/gzip"]
